[package]
name = "jargon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
smol = "2.0.0"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
