[package]
name = "jargon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["cargo"] }
csv = "1.3.0"
futures = "0.3.30"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
smol = "2.0.0"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
